Add comment for class "AvoidFinalizerAndCleaner"